--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.1",
   "description": "Kinyarwanda-first maternal health chatbot for Rwandan mothers",
   "private": true,
+
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
@@ -26,17 +29,20 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.23.0",
     "react-speech-recognition": "^3.10.0",
     "styled-components": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "publish": "npm publish",
+    "prepublishOnly": "npm run build",
+    "git": "read -p 'Enter commit message: ' msg && git add . && git commit -m \"$msg\" && git push origin main"
   },
   "eslintConfig": {
     "extends": [
