--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maternal-health-chatbot",
   "version": "1.0.1",
-  "description": "Kinyarwanda-first maternal health chatbot for Rwandan mothers",
+  "description": "Kinyarwanda-first maternal health digital platform for Rwandan mothers",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,7 +15,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
-    "i18next": "^25.7.2",
+    "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -25,14 +25,15 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^16.5.0",
+    "react-i18next": "^15.0.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-speech-recognition": "^3.10.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.0"
