--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^13.0.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "react-speech-recognition": "^3.10.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.0"
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "typescript": "4.9.5"
   }
 }
